--- a/FOL.cabal
+++ b/FOL.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   ghc-options:         -Wall
-  exposed-modules:     FOL
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:     FOL, TheoryHelpers, Vampire, E, Backend
+  build-depends:       base >= 4.7 && < 5,
+                       process
   default-language:    Haskell2010
